--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wearable-preview",
+  "name": "@dcl/wearable-preview",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
+    "decentraland-ui": "^3.12.1",
     "fp-future": "^1.0.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
