feat: play emotes

--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
     "singleQuote": true,
     "printWidth": 140
   },
-  "homepage": "https://cdn.decentraland.org/@dcl/wearable-preview/0.1.0"
+  "homepage": ""
 }
