--- a/public/package.json
+++ b/public/package.json
@@ -9,5 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "Apache-2.0",
-  "homepage": "https://cdn.decentraland.org/@dcl/wearable-preview/0.1.0"
+  "homepage": ""
 }
