--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/deep-equal": "^1.0.1",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
     "decentraland-ui": "^3.12.1",
+    "deep-equal": "^2.0.5",
     "fp-future": "^1.0.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
