--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "deep-equal": "^2.0.5",
     "fp-future": "^1.0.1",
     "prettier": "^2.4.1",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
