--- a/.github/workflows/set-rollout.yaml
+++ b/.github/workflows/set-rollout.yaml
@@ -1,4 +1,4 @@
-name: Set delivery rollout
+name: Set rollout
 
 on: [deployment_status]
 
@@ -40,22 +40,5 @@ jobs:
 
           # Rollout information
           deploymentDomain: 'wearable-preview.decentraland.today'
-          deploymentName: '_site'
-          percentage: 100
-
-      - name: set-rollout-org
-        uses: decentraland/set-rollout-action@main
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          # Repo deployment info
-          ref: ${{ github.event.deployment.ref }}
-          sha: ${{ github.event.deployment.sha }}
-
-          # CDN information
-          packageName: ${{ github.event.deployment.payload.packageName }}
-          packageVersion: ${{ github.event.deployment.payload.packageVersion }}
-
-          # Rollout information
-          deploymentDomain: 'wearable-preview.decentraland.org'
           deploymentName: '_site'
           percentage: 100
