ci: make vercel build on debug mode

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
   "build": {
     "env": {
       "GEN_STATIC_LOCAL": "true",
-      "PUBLIC_URL": "/"
+      "PUBLIC_URL": "/",
+      "REACT_APP_DEBUG": "true"
     }
   },
   "routes": [
