--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -24,8 +24,14 @@ jobs:
           only-update-versions: true
       - name: Install
         run: npm ci --legacy-peer-deps
-      - name: Build
+      - name: Build static-local
+        run: npm run build && mv ./build ./static-local
+        env:
+          GEN_STATIC_LOCAL: true
+      - name: Build for CDN
         run: npm run build
+      - name: Move static-local into main build
+        run: mv ./static-local ./build/static-local
       - name: Publish
         uses: menduz/oddish-action@master
         with:
