remove react app debug

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     "env": {
       "GEN_STATIC_LOCAL": "true",
       "PUBLIC_URL": "/",
-      "REACT_APP_DEBUG": "true"
+      "REACT_APP_DEBUG": "false"
     }
   },
   "routes": [
