Remove env variable

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
   "build": {
     "env": {
       "GEN_STATIC_LOCAL": "true",
-      "PUBLIC_URL": "/",
-      "REACT_APP_DEBUG": "false"
+      "PUBLIC_URL": "/"
     }
   },
   "routes": [
