add missing dependency

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babylonjs/inspector": "^6.21.0",
     "@babylonjs/loaders": "^6.21.0",
     "@babylonjs/materials": "^6.21.0",
+    "@babylonjs/serializers": "^6.21.0",
     "@dcl/schemas": "^9.4.1",
     "@dcl/ui-env": "^1.2.0",
     "@testing-library/jest-dom": "^5.15.0",
