--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babylonjs/core": "^6.21.0",
     "@babylonjs/gui": "^6.21.0",
+    "@babylonjs/gui-editor": "^6.21.0",
     "@babylonjs/inspector": "^6.21.0",
     "@babylonjs/loaders": "^6.21.0",
     "@babylonjs/materials": "^6.21.0",
@@ -20,7 +21,6 @@
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
-    "decentraland-ui": "^3.49.0",
     "deep-equal": "^2.0.5",
     "fp-future": "^1.0.1",
     "prettier": "^2.4.1",
