feat: upgrade babylonjs to v6 (#92)

--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0-development",
   "private": true,
   "dependencies": {
-    "@babylonjs/core": "^4.2.2",
-    "@babylonjs/gui": "^4.2.2",
-    "@babylonjs/inspector": "^4.2.2",
-    "@babylonjs/loaders": "^4.2.2",
-    "@babylonjs/materials": "^4.2.2",
+    "@babylonjs/core": "^6.21.0",
+    "@babylonjs/gui": "^6.21.0",
+    "@babylonjs/gui-editor": "^6.21.0",
+    "@babylonjs/inspector": "^6.21.0",
+    "@babylonjs/loaders": "^6.21.0",
+    "@babylonjs/materials": "^6.21.0",
+    "@babylonjs/serializers": "^6.21.0",
     "@dcl/schemas": "^9.4.1",
     "@dcl/ui-env": "^1.2.0",
     "@testing-library/jest-dom": "^5.15.0",
@@ -19,7 +21,6 @@
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
-    "decentraland-ui": "^3.49.0",
     "deep-equal": "^2.0.5",
     "fp-future": "^1.0.1",
     "prettier": "^2.4.1",
