--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start:debug": "REACT_APP_DEBUG=1 react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "start:debug": "REACT_APP_DEBUG=1 react-scripts --openssl-legacy-provider start",
+    "build": "CI=false && react-scripts --openssl-legacy-provider build",
     "build:static-local": "GEN_STATIC_LOCAL=true npm run build && mv ./build ./static-local",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts --openssl-legacy-provider eject",
     "prebuild": "node ./scripts/prebuild.js"
   },
   "eslintConfig": {
@@ -44,6 +44,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "engines": {
+    "node": "18"
   },
   "browserslist": {
     "production": [
