--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
     "singleQuote": true,
     "printWidth": 120
   },
-  "homepage": ""
+  "homepage": "",
+  "devDependencies": {
+    "@foxify/events": "^2.1.0"
+  }
 }
