--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
       "not op_mini all"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/decentraland/wearable-preview.git"
+  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
