--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,16 @@
   "name": "builder",
   "build": {
     "env": {
+      "NODE_ENV": "development",
       "GEN_STATIC_LOCAL": "true",
-      "PUBLIC_URL": "/",
-      "REACT_APP_DEBUG": "true"
+      "VITE_BASE_URL": "/",
+      "VITE_REACT_APP_DCL_DEFAULT_ENV": "true"
     }
   },
-  "routes": [
+  "rewrites": [
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/.*",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
