--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.5.1",
+    "dotenv": "^16.5.0",
     "prettier": "^3.5.3",
     "typescript": "^5.2.2",
     "vite": "^6.3.5"
