--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build": "vite build",
     "build:static-local": "GEN_STATIC_LOCAL=true npm run build && mv ./build ./static-local",
     "test": "jest",
-    "prebuild": "node ./scripts/prebuild.cjs"
+    "prebuild": "node ./scripts/prebuild.cjs",
+    "update-unity": "node ./scripts/update-unity.cjs"
   },
   "eslintConfig": {
     "extends": [
