--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dcl/schemas": "^16.9.0",
     "@dcl/ui-env": "^1.5.1",
     "classnames": "^2.3.1",
+    "decentraland-ui": "^6.17.1",
     "fast-deep-equal": "^3.1.3",
     "fp-future": "^1.0.1",
     "mitt": "^3.0.1",
