--- a/package.json
+++ b/package.json
@@ -2,43 +2,32 @@
   "name": "@dcl/wearable-preview",
   "version": "0.0.0-development",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@babylonjs/core": "^4.2.2",
     "@babylonjs/gui": "^4.2.2",
     "@babylonjs/inspector": "^4.2.2",
     "@babylonjs/loaders": "^4.2.2",
     "@babylonjs/materials": "^4.2.2",
-    "@dcl/schemas": "^11.5.0",
-    "@dcl/ui-env": "^1.2.0",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/deep-equal": "^1.0.1",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.35",
-    "@types/react-dom": "^17.0.11",
+    "@dcl/schemas": "^16.14.0",
+    "@dcl/ui-env": "^1.5.1",
     "classnames": "^2.3.1",
-    "decentraland-ui": "^3.49.0",
-    "deep-equal": "^2.0.5",
+    "decentraland-ui": "^6.17.1",
+    "fast-deep-equal": "^3.1.3",
     "fp-future": "^1.0.1",
     "mitt": "^3.0.1",
-    "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.4.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "start:debug": "REACT_APP_DEBUG=1 react-scripts --openssl-legacy-provider start",
-    "build": "CI=false && react-scripts --openssl-legacy-provider build",
+    "start": "vite",
+    "build": "vite build",
     "build:static-local": "GEN_STATIC_LOCAL=true npm run build && mv ./build ./static-local",
-    "test": "react-scripts test",
-    "eject": "react-scripts --openssl-legacy-provider eject",
-    "prebuild": "node ./scripts/prebuild.js"
+    "test": "jest",
+    "prebuild": "node ./scripts/prebuild.cjs",
+    "update-unity": "node ./scripts/update-unity.cjs"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +36,7 @@
     ]
   },
   "engines": {
-    "node": "18"
+    "node": "22"
   },
   "browserslist": {
     "production": [
@@ -70,5 +59,21 @@
     "singleQuote": true,
     "printWidth": 120
   },
-  "homepage": ""
+  "homepage": "",
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/deep-equal": "^1.0.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^22.15.30",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.5.1",
+    "dotenv": "^16.5.0",
+    "prettier": "^3.5.3",
+    "rollup": "^4.42.0",
+    "typescript": "^5.2.2",
+    "vite": "^6.3.5"
+  }
 }
