--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,37 @@
   "name": "builder",
   "build": {
     "env": {
+      "NODE_ENV": "development",
       "GEN_STATIC_LOCAL": "true",
-      "PUBLIC_URL": "/",
-      "REACT_APP_DEBUG": "true"
+      "VITE_BASE_URL": "/",
+      "VITE_REACT_APP_DCL_DEFAULT_ENV": "true",
+      "VITE_ROLLUP_USE_NATIVE": "false"
     }
   },
-  "routes": [
+  "rewrites": [
     {
-      "handle": "filesystem"
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)\\.br",
+      "headers": [
+        {
+          "key": "Content-Encoding",
+          "value": "br"
+        }
+      ]
     },
     {
-      "src": "/.*",
-      "dest": "/index.html"
+      "source": "/(.*)\\.wasm\\.br",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/wasm"
+        }
+      ]
     }
   ]
 }
