fix: format file

--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -46,6 +46,6 @@ jobs:
           gitlab-token: ${{ secrets.GITLAB_CDN_DEPLOYER_TOKEN }}
           gitlab-pipeline-url: ${{ secrets.GITLAB_CDN_DEPLOYER_URL }}
           config:
-            - .github/workflows/cdn-unity.config.json
+            - .github/workflows/config/cdn-unity.yaml
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
